// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`evo-dialog > renders default version 1`] = `
"<button
  class="btn btn--secondary"
  type="button"
>
  Open Dialog
</button>
<dialog
  aria-labelledby="GENERATED-0"
  class="dialog dialog--close"
  closedby="any"
>
  <div
    class="dialog__header"
  >
    <h2
      class="dialog__title"
      id="GENERATED-0"
    >
      Dialog Title
    </h2>
    <button
      aria-label="Close Dialog"
      class="dialog__close icon-btn"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="icon icon--16"
      >
        <symbol
          id="GENERATED-1"
          viewBox="0 0 16 16"
        >
          <path
            d="M2.293 2.293a1 1 0 0 1 1.414 0L8 6.586l4.293-4.293a1 1 0 1 1 1.414 1.414L9.414 8l4.293 4.293a1 1 0 0 1-1.414 1.414L8 9.414l-4.293 4.293a1 1 0 0 1-1.414-1.414L6.586 8 2.293 3.707a1 1 0 0 1 0-1.414Z"
          />
        </symbol>
        <use
          href="#icon-close-16"
        />
      </svg>
    </button>
  </div>
  <div
    class="dialog__main"
  >
    <p>
      This is the default dialog content.
    </p>
  </div>
</dialog>"
`;

exports[`evo-dialog > renders in open state 1`] = `
"<button
  class="btn btn--secondary"
  type="button"
>
  Open Dialog
</button>
<dialog
  aria-labelledby="GENERATED-0"
  class="dialog"
  closedby="any"
>
  <div
    class="dialog__header"
  >
    <h2
      class="dialog__title"
      id="GENERATED-0"
    >
      Dialog Title
    </h2>
    <button
      aria-label="Close Dialog"
      class="dialog__close icon-btn"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="icon icon--16"
      >
        <symbol
          id="GENERATED-1"
          viewBox="0 0 16 16"
        >
          <path
            d="M2.293 2.293a1 1 0 0 1 1.414 0L8 6.586l4.293-4.293a1 1 0 1 1 1.414 1.414L9.414 8l4.293 4.293a1 1 0 0 1-1.414 1.414L8 9.414l-4.293 4.293a1 1 0 0 1-1.414-1.414L6.586 8 2.293 3.707a1 1 0 0 1 0-1.414Z"
          />
        </symbol>
        <use
          href="#icon-close-16"
        />
      </svg>
    </button>
  </div>
  <div
    class="dialog__main"
  >
    <p>
      This is the default dialog content.
    </p>
  </div>
</dialog>"
`;

exports[`evo-dialog > renders with size large 1`] = `
"<button
  class="btn btn--secondary"
  type="button"
>
  Open Dialog
</button>
<dialog
  aria-labelledby="GENERATED-0"
  class="dialog dialog--close dialog--large"
  closedby="any"
>
  <div
    class="dialog__header"
  >
    <h2
      class="dialog__title"
      id="GENERATED-0"
    >
      Dialog Title
    </h2>
    <button
      aria-label="Close Dialog"
      class="dialog__close icon-btn"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="icon icon--16"
      >
        <symbol
          id="GENERATED-1"
          viewBox="0 0 16 16"
        >
          <path
            d="M2.293 2.293a1 1 0 0 1 1.414 0L8 6.586l4.293-4.293a1 1 0 1 1 1.414 1.414L9.414 8l4.293 4.293a1 1 0 0 1-1.414 1.414L8 9.414l-4.293 4.293a1 1 0 0 1-1.414-1.414L6.586 8 2.293 3.707a1 1 0 0 1 0-1.414Z"
          />
        </symbol>
        <use
          href="#icon-close-16"
        />
      </svg>
    </button>
  </div>
  <div
    class="dialog__main"
  >
    <p>
      This is the default dialog content.
    </p>
  </div>
</dialog>"
`;

exports[`evo-dialog > renders with size narrow 1`] = `
"<button
  class="btn btn--secondary"
  type="button"
>
  Open Dialog
</button>
<dialog
  aria-labelledby="GENERATED-0"
  class="dialog dialog--close dialog--narrow"
  closedby="any"
>
  <div
    class="dialog__header"
  >
    <h2
      class="dialog__title"
      id="GENERATED-0"
    >
      Dialog Title
    </h2>
    <button
      aria-label="Close Dialog"
      class="dialog__close icon-btn"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="icon icon--16"
      >
        <symbol
          id="GENERATED-1"
          viewBox="0 0 16 16"
        >
          <path
            d="M2.293 2.293a1 1 0 0 1 1.414 0L8 6.586l4.293-4.293a1 1 0 1 1 1.414 1.414L9.414 8l4.293 4.293a1 1 0 0 1-1.414 1.414L8 9.414l-4.293 4.293a1 1 0 0 1-1.414-1.414L6.586 8 2.293 3.707a1 1 0 0 1 0-1.414Z"
          />
        </symbol>
        <use
          href="#icon-close-16"
        />
      </svg>
    </button>
  </div>
  <div
    class="dialog__main"
  >
    <p>
      This is the default dialog content.
    </p>
  </div>
</dialog>"
`;

exports[`evo-dialog > renders with size wide 1`] = `
"<button
  class="btn btn--secondary"
  type="button"
>
  Open Dialog
</button>
<dialog
  aria-labelledby="GENERATED-0"
  class="dialog dialog--close dialog--wide"
  closedby="any"
>
  <div
    class="dialog__header"
  >
    <h2
      class="dialog__title"
      id="GENERATED-0"
    >
      Dialog Title
    </h2>
    <button
      aria-label="Close Dialog"
      class="dialog__close icon-btn"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="icon icon--16"
      >
        <symbol
          id="GENERATED-1"
          viewBox="0 0 16 16"
        >
          <path
            d="M2.293 2.293a1 1 0 0 1 1.414 0L8 6.586l4.293-4.293a1 1 0 1 1 1.414 1.414L9.414 8l4.293 4.293a1 1 0 0 1-1.414 1.414L8 9.414l-4.293 4.293a1 1 0 0 1-1.414-1.414L6.586 8 2.293 3.707a1 1 0 0 1 0-1.414Z"
          />
        </symbol>
        <use
          href="#icon-close-16"
        />
      </svg>
    </button>
  </div>
  <div
    class="dialog__main"
  >
    <p>
      This is the default dialog content.
    </p>
  </div>
</dialog>"
`;
